[package]
name = "uslegalpro"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "uslegalpro is a simple library to help with interacting with uslegalpro's JSON API via the reqwest crate."
homepage = "https://github.com/evictionapp/uslegalpro"
repository = "https://github.com/evictionapp/uslegalpro"
readme = "./README.md"

[dependencies]
reqwest = { version = "0.11.20", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"